<resources>
    <string name="app_name">ToDo</string>
    <string name="listitem">ListItem</string>
    <string name="delete">Delete</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="clear_all">Clear all</string>
    <string name="clear">Clear</string>
    <string name="text">Enter note</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackTooltip">Provide feedback about 2Do</string>
    <string name="developer">About Developer</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="search">Search</string>
    <string name="take_note">Take Note</string>
    <string name="submit">Submit</string>
    <string name="nikhil_maurya">Nikhil Maurya</string>
    <string name="android_developer">Android Developer</string>
    <string name="mail">e-mail</string>
    <string name="ran">ran</string>
    <string name="share_app">Share App</string>
    <string name="priority">Priority</string>
    <string name="update">Update</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="insert_success">Insertion Successful</string>
    <string name="internal_error">Internal error</string>
    <string name="text_required">Text Required</string>
    <string name="no_email_client_app_found">No e-mail client app found</string>
    <string name="no_browser_found">No browser found</string>
    <string name="lead_to_email_for_feedback">Lead to email App for feedback</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_del_all_notes">Are you sure to delete all notes</string>
    <string name="yes">YES</string>
    <string name="cleared_all_items">Cleared all items</string>
    <string name="no">No</string>
    <string name="no_items_avl_do_insrt">No Items available. Do Insert</string>
    <string name="select_option">Select Option</string>
    <string name="share_with">Share with…</string>
    <string name="deleted_item">Deleted Item</string>
    <string name="note_copied">Note Copied</string>
    <string name="note_checked">Checked %s</string>
    <string name="note_off_checked">Off Checked %s</string>
</resources>
